# cmake-demo

cmake-day-4/: CMakeLists.txt  main.cpp
cmake-day-4/add/: CMakeLists.txt  add.cpp  add.h
cmake-day-4/person/: CMakeLists.txt  person.cpp  person.h
cmake-day-4/print/: CMakeLists.txt  print.cpp  print.h
cmake-day-5/: CMakeLists.txt  Config.h.in  main.cpp
cmake-day-8/demo1/: CMakeLists.txt
cmake-day-8/demo1/dir1/: CMakeLists.txt  test1.cpp
cmake-day-8/demo1/dir1/dir3/: CMakeLists.txt  test3.cpp
cmake-day-8/demo1/dir2/: CMakeLists.txt  test2.cpp
